--- a/index.html
+++ b/index.html
@@ -4,19 +4,283 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery Webpage</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Gallery | Awani Caleb</title>
+    <meta name="description"content="A beautifully designed gallery showcasing stunning images and creative works by Awani Caleb. Built with Bootstrap and Vite.">
+    <meta name="author" content="Awani Caleb">
+    <meta name="keywords" content="gallery, photography, artwork, Bootstrap, Vite, Awani Caleb">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ac-gallery.vercel.app/">
+    <meta property="og:title" content="Gallery | Awani Caleb">
+    <meta property="og:description"
+        content="A beautifully designed gallery showcasing stunning images and creative works by Awani Caleb.">
+    <meta property="og:image" content="https://ac-gallery.vercel.app/assets/images/screenshots/index.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://ac-gallery.vercel.app/">
+    <meta name="twitter:title" content="Gallery | Awani Caleb">
+    <meta name="twitter:description"
+        content="A beautifully designed gallery showcasing stunning images and creative works by Awani Caleb.">
+    <meta name="twitter:image" content="https://ac-gallery.vercel.app/assets/images/screenshots/index.png">
+
+    <!-- Favicon -->
+    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon"> -->
+
+    <!-- Styles -->
+    <link href="node_modules/@fortawesome/fontawesome-free/css/all.css" rel="stylesheet">
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/src/styles/style.css" rel="stylesheet">
+    <link href="/src/styles/all.css" rel="stylesheet">
+
+    <!-- Scripts -->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+    <script src="/src/scripts/all.js"></script>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <div class="container my-5">
-        <h1 class="text-center">My Gallery</h1>
-        <div class="row" id="gallery">
-            <!-- Gallery items will go here -->
+<body class="bg-black ">
+    <header>
+        <nav class="navbar bg-black d-lg-none d-bloack">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white text-uppercase fw-bold font-quicksand me-2" href="./">Gallery</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+                    aria-controls="offcanvasRight">
+                    <i class="fa-solid fa-bars text-white"></i>
+                </button>
+            </div>
+        </nav>
+
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="nav flex-column gap-2 mb-5 page-side-navigation">
+                    <li class="nav-item">
+                        <a class="text-uppercase px-0 py-1 nav-link text-secondary active fs-4" aria-current="page"
+                            href="./">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-uppercase px-0 py-1 nav-link text-secondary fs-4" href="./about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-uppercase px-0 py-1 nav-link text-secondary fs-4"
+                            href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+
+                <div class="d-flex gap-3">
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="text-secondary fs-4">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="text-secondary fs-4">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" class="text-secondary fs-4">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
         </div>
-    </div>
-    <script type="module" src="/src/scripts/main.js"></script>
+    </header>
+
+    <main class="d-flex justify-content-center">
+        <div class="container-fluid row px-0 h-100 ">
+            <div class="col-lg-10 ps-lg-0" id="left-pane">
+                <div id="page-content-cover">
+                    <div class="container ps-lg-0 pt-lg-0 pt-3">
+                        <div class="row align-items-stretch">
+                            <div class="col-6 col-lg-4 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/11.jpg"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-8 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/6.jpg"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-5 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/1.jpg"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-3 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/5.jpg"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-4 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/10.jpg"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-8 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/1.png"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-4 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/7.jpg"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- Line -->
+                            <div class="col-6 col-lg-3 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/14.jpg"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-6 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/13.jpg"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-6 col-lg-3 mb-4">
+                                <a href="#"
+                                    class="d-block gallery-item bg-dark scroll-animate ease overflow-hidden position-relative">
+                                    <img loading="lazy" src="/src/assets/images/12.jpg"
+                                        class="img-fluid object-fit-cover w-100 h-100 gallery-item-image" alt="Image 1">
+                                    <div
+                                        class="gallery-item-descripition position-absolute overflow-hidden top-50 start-50 translate-middle z-3 ease opacity-0 mt-3">
+                                        <h3 class="gid-title text-white text-center h5">Photo Title</h3>
+                                        <p class="gid-details text-center fs-6 text-secondary">Some details about
+                                            something goes here lol</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="page-footer">
+                    <div class="p-3 text-center">
+                        <p class="text-secondary">Copyright &copy;2024 All rights reserved. Designed by and created by
+                            <a href="https://ac-profile-card.vercel.app/" target="_blank" rel="noopener noreferrer"
+                                class="primary-text text-decoration-none">Awani Caleb</a>
+                        </p>
+                        <p class="small text-secondary ">
+                            The images used on this site are sourced from platforms like Pexels, Unsplash, and others. All rights to these images belong to their respective photographers. If you are the owner of any image and would like it removed, please contact me.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-2 d-lg-flex d-none position-sticky top-0 h-100" id="right-pane">
+                <div class="w-100 py-5 px-2" id="page-side-navigation-cover">
+                    <h1 class="h5 text-end text-uppercase font-quicksand mb-4 text-white fw-bolder ">Gallery</h1>
+
+                    <ul class="nav flex-column text-end gap-2 mb-5" id="page-side-navigation">
+                        <li class="nav-item">
+                            <a class="text-uppercase px-0 py-1 small nav-link text-secondary active" aria-current="page"
+                                href="./">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-uppercase px-0 py-1 small nav-link text-secondary"
+                                href="./about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="text-uppercase px-0 py-1 small nav-link text-secondary"
+                                href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
+
+                    <div class="d-flex gap-3 justify-content-end ">
+                        <a href="#" target="_blank" rel="noopener noreferrer" class="text-secondary">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer" class="text-secondary">
+                            <i class="fa-brands fa-x-twitter"></i>
+                        </a>
+                        <a href="#" target="_blank" rel="noopener noreferrer" class="text-secondary">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
