fix: correct missing whitespace in meta tag attributes

--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
 
     <!-- Primary Meta Tags -->
     <title>About / Gallery | Awani Caleb</title>
-    <meta name="description"
-        content="Learn more about Awani Caleb and the vision behind this stunning gallery of photography and creative works.">
+    <meta name="description" content="Learn more about Awani Caleb and the vision behind this stunning gallery of photography and creative works.">
     <meta name="author" content="Awani Caleb">
     <meta name="keywords" content="about, gallery, Awani Caleb, photography, artwork, Bootstrap, Vite">
     <meta name="robots" content="index, follow">
@@ -17,16 +16,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ac-gallery.vercel.app/about.html">
     <meta property="og:title" content="About / Gallery | Awani Caleb">
-    <meta property="og:description"
-        content="Learn more about Awani Caleb and the vision behind this stunning gallery of photography and creative works.">
+    <meta property="og:description" content="Learn more about Awani Caleb and the vision behind this stunning gallery of photography and creative works.">
     <meta property="og:image" content="https://ac-gallery.vercel.app/assets/images/screenshots/about.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://ac-gallery.vercel.app/about.html">
     <meta name="twitter:title" content="About / Gallery | Awani Caleb">
-    <meta name="twitter:description"
-        content="Learn more about Awani Caleb and the vision behind this stunning gallery of photography and creative works.">
+    <meta name="twitter:description" content="Learn more about Awani Caleb and the vision behind this stunning gallery of photography and creative works.">
     <meta name="twitter:image" content="https://ac-gallery.vercel.app/assets/images/screenshots/about.png">
 
     <!-- Favicon -->
