--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,7 @@
 
     <!-- Primary Meta Tags -->
     <title>Contact / Gallery | Awani Caleb</title>
-    <meta name="description"
-        content="Get in touch through this contact page. For inquiries, feedback, or collaborations, feel free to reach out.">
+    <meta name="description" content="Get in touch through this contact page. For inquiries, feedback, or collaborations, feel free to reach out.">
     <meta name="author" content="Awani Caleb">
     <meta name="keywords" content="contact, Awani Caleb, gallery, inquiries, feedback, collaborations">
     <meta name="robots" content="index, follow">
@@ -17,16 +16,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ac-gallery.vercel.app/contact.html">
     <meta property="og:title" content="Contact / Gallery | Awani Caleb">
-    <meta property="og:description"
-        content="Get in touch  through this contact page. For inquiries, feedback, or collaborations, feel free to reach out.">
+    <meta property="og:description" content="Get in touch  through this contact page. For inquiries, feedback, or collaborations, feel free to reach out.">
     <meta property="og:image" content="https://ac-gallery.vercel.app/assets/images/screenshots/contact.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://ac-gallery.vercel.app/contact.html">
     <meta name="twitter:title" content="Contact / Gallery | Awani Caleb">
-    <meta name="twitter:description"
-        content="Get in touch through this contact page. For inquiries, feedback, or collaborations, feel free to reach out.">
+    <meta name="twitter:description" content="Get in touch through this contact page. For inquiries, feedback, or collaborations, feel free to reach out.">
     <meta name="twitter:image" content="https://ac-gallery.vercel.app/assets/images/screenshots/contact.png">
 
     <!-- Favicon -->
