--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ac-gallery.vercel.app/">
     <meta property="og:title" content="Gallery | Awani Caleb">
-    <meta property="og:description"
-        content="A beautifully designed gallery showcasing stunning images and creative works by Awani Caleb.">
+    <meta property="og:description" content="A beautifully designed gallery showcasing stunning images and creative works by Awani Caleb.">
     <meta property="og:image" content="https://ac-gallery.vercel.app/assets/images/screenshots/index.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://ac-gallery.vercel.app/">
     <meta name="twitter:title" content="Gallery | Awani Caleb">
-    <meta name="twitter:description"
-        content="A beautifully designed gallery showcasing stunning images and creative works by Awani Caleb.">
+    <meta name="twitter:description" content="A beautifully designed gallery showcasing stunning images and creative works by Awani Caleb.">
     <meta name="twitter:image" content="https://ac-gallery.vercel.app/assets/images/screenshots/index.png">
 
     <!-- Favicon -->
